--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_productsSidebar.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_productsSidebar.scss
@@ -456,7 +456,8 @@
 
         &__trigger {
           padding: $indent__s;
-          padding-right: 100%;
+          padding-right: 85%;
+          cursor: pointer;
 
           &::before {
             vertical-align: sub;
@@ -466,9 +467,10 @@
         &__contentOuter {
           padding-left: 0;
           padding-right: 0;
+          border: 1px solid $c-border;
 
           .Collapsible__trigger {
-            padding-right: 15px;
+            padding-right: 80%;
 
             &::before {
               vertical-align: baseline;
@@ -478,7 +480,11 @@
 
         &__contentInner {
           background-color: $c-smoke;
-          margin-top: 15px;
+          margin-top: 11px;
+
+          .Collapsible__contentOuter {
+            border: none;
+          }
         }
       }
     }
